@@ -478,8 +478,6 @@ sub start
 
     my @ifaces = @{$self->{net}->ifaces()};
     foreach my $ifc (@ifaces) {
-        next if ($self->{net}->ifaceMethod($ifc) eq 'bridged');
-
         if ($self->{net}->ifaceMethod($ifc) eq any('dhcp', 'ppp')) {
             push(@commands, @{$self->_setDHCP($ifc)});
         } else {
@@ -515,27 +513,14 @@ sub start
             my $addr = $self->{net}->ifaceAddress($if);
             my $src = $addr;
 
-            # If it's a bridge SNAT traffic out of the network
-            if ( $self->{net}->ifaceIsBridge($if) ) {
-                my $mask = $self->{net}->ifaceNetmask($if);
-                $src = "$addr/$mask";
-            }
             push(@commands,
                 pf("-t nat -A POSTROUTING ! -s $src $output " .
                    "-j SNAT --to $addr")
             );
         } elsif (($method eq 'dhcp') or ($method eq 'ppp')) {
-            if ( $self->{net}->ifaceIsBridge($if) ) {
-                push(@commands,
-                    pf("-t nat -A POSTROUTING $output -m physdev" .
-                       " ! --physdev-is-bridged -j MASQUERADE")
-                );
-            }
-            else {
-                push(@commands,
-                    pf("-t nat -A POSTROUTING $output -j MASQUERADE")
-                );
-            }
+            push(@commands,
+                pf("-t nat -A POSTROUTING $output -j MASQUERADE")
+            );
         }
     }
 
@@ -968,7 +953,6 @@ sub _log
 # Method: _outputIface
 #
 #   Returns iptables rule part for output interface selection
-#   Takes into account if the iface is part of a bridge
 #
 # Parameters:
 #
@@ -978,18 +962,12 @@ sub _outputIface # (iface)
 {
     my ($self, $iface) = @_;
 
-    if ( $self->{net}->ifaceExists($iface) and
-         $self->{net}->ifaceMethod($iface) eq 'bridged' ) {
-        return  "-m physdev --physdev-out $iface";
-    } else {
-        return "-o $iface";
-    }
+    return "-o $iface";
 }
 
 # Method: _inputIface
 #
 #   Returns iptables rule part for input interface selection
-#   Takes into account if the iface is part of a bridge
 #
 # Parameters:
 #
@@ -999,12 +977,7 @@ sub _inputIface # (iface)
 {
     my ($self, $iface) = @_;
 
-    if ( $self->{net}->ifaceExists($iface) and
-         $self->{net}->ifaceMethod($iface) eq 'bridged' ) {
-        return  "-m physdev --physdev-in $iface";
-    } else {
-        return "-i $iface";
-    }
+    return "-i $iface";
 }
 
 # Method: _natEnabled
