@@ -1,3 +1,5 @@
+HEAD
+	+ Remove leftovers of bonding and bridged mode
 4.1
 	+ Remove multi-gateway functionality (balancing, failover, etc)
 	+ Remove support for PPPoE, bridged and bundled interfaces
