@@ -1,3 +1,5 @@
+HEAD
+	+ Remove deprecated bridged mode condition
 4.1.2
 	+ Add integration with zentyal-antivirus
 4.1.1
