@@ -1,3 +1,5 @@
+HEAD
+	+ Remove leftovers of bridged mode
 4.1
 	+ Set version to 4.1
 4.0
